--- a/composer.json
+++ b/composer.json
@@ -96,20 +96,21 @@
         "overtrue/easy-sms": "^1.0",
         "pingplusplus/pingpp-php": "^2.2",
         "predis/predis": "^1.1",
-        "slimkit/plus-appversion": "1.8.0-alpha.3",
-        "slimkit/plus-around-amap": "1.8.0-alpha.3",
-        "slimkit/plus-checkin": "1.8.0-alpha.3",
-        "slimkit/plus-feed": "1.8.0-alpha.3",
-        "slimkit/plus-id": "1.8.0-alpha.3",
-        "slimkit/plus-music": "1.8.0-alpha.3",
-        "slimkit/plus-news": "1.8.0-alpha.3",
-        "slimkit/plus-socialite": "1.8.0-alpha.3",
+        "slimkit/plus-appversion": "1.8.0",
+        "slimkit/plus-around-amap": "1.8.0",
+        "slimkit/plus-checkin": "1.8.0",
+        "slimkit/plus-feed": "1.8.0",
+        "slimkit/plus-id": "1.8.0",
+        "slimkit/plus-music": "1.8.0",
+        "slimkit/plus-news": "1.8.0",
+        "slimkit/plus-socialite": "1.8.0",
         "symfony/finder": "^4.0",
         "symfony/yaml": "^4.0",
         "tymon/jwt-auth": "1.0.0-rc.2"
     },
     "require-dev": {
         "codacy/coverage": "^1.4",
+        "codedungeon/phpunit-result-printer": "^0.11.0",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
