feat(Admin): Add web client manager

--- a/public/assets/mix-manifest.json
+++ b/public/assets/mix-manifest.json
@@ -3,5 +3,95 @@
     "/js/installer.js": "/js/installer.js",
     "/js/bootstrap.js": "/js/bootstrap.js",
     "/css/bootstrap.css": "/css/bootstrap.css",
-    "/installer/logo.png": "/installer/logo.png"
+    "/installer/logo.png": "/installer/logo.png",
+    "/0.4f53e8de84109e15cabc.hot-update.js": "/0.4f53e8de84109e15cabc.hot-update.js",
+    "/0.a30e9ffa59184c8df19d.hot-update.js": "/0.a30e9ffa59184c8df19d.hot-update.js",
+    "/0.b9bb586d6e4fd97c0e37.hot-update.js": "/0.b9bb586d6e4fd97c0e37.hot-update.js",
+    "/0.2fa4bb74f905df5f370d.hot-update.js": "/0.2fa4bb74f905df5f370d.hot-update.js",
+    "/0.71fdc00c21730073477e.hot-update.js": "/0.71fdc00c21730073477e.hot-update.js",
+    "/0.b7cf7829d525b1ba507d.hot-update.js": "/0.b7cf7829d525b1ba507d.hot-update.js",
+    "/0.080246d4a4394bfc2ca8.hot-update.js": "/0.080246d4a4394bfc2ca8.hot-update.js",
+    "/0.5a71860e681ca95f7cdc.hot-update.js": "/0.5a71860e681ca95f7cdc.hot-update.js",
+    "/0.5e0e4a6859e1d33e52c4.hot-update.js": "/0.5e0e4a6859e1d33e52c4.hot-update.js",
+    "/0.d113f116a5a6959d1df0.hot-update.js": "/0.d113f116a5a6959d1df0.hot-update.js",
+    "/0.21e660ef7e322d6595c0.hot-update.js": "/0.21e660ef7e322d6595c0.hot-update.js",
+    "/0.4f1017cc078bbf243160.hot-update.js": "/0.4f1017cc078bbf243160.hot-update.js",
+    "/0.252e048e8da464b2a45f.hot-update.js": "/0.252e048e8da464b2a45f.hot-update.js",
+    "/0.22ffeac5fe58f98dd937.hot-update.js": "/0.22ffeac5fe58f98dd937.hot-update.js",
+    "/0.40f06741e23c6aee465d.hot-update.js": "/0.40f06741e23c6aee465d.hot-update.js",
+    "/0.609c57e4641a7384a90e.hot-update.js": "/0.609c57e4641a7384a90e.hot-update.js",
+    "/0.bea6104b2ec4d1e9cbc4.hot-update.js": "/0.bea6104b2ec4d1e9cbc4.hot-update.js",
+    "/0.c7fd9f2f813435530cee.hot-update.js": "/0.c7fd9f2f813435530cee.hot-update.js",
+    "/0.f15bf279393cbcfb8b64.hot-update.js": "/0.f15bf279393cbcfb8b64.hot-update.js",
+    "/0.ed195030b08f2936de99.hot-update.js": "/0.ed195030b08f2936de99.hot-update.js",
+    "/0.c721034fbd026fb5ad43.hot-update.js": "/0.c721034fbd026fb5ad43.hot-update.js",
+    "/0.4bdfad40ed26bf8c5c4e.hot-update.js": "/0.4bdfad40ed26bf8c5c4e.hot-update.js",
+    "/0.022c5563331ec506682e.hot-update.js": "/0.022c5563331ec506682e.hot-update.js",
+    "/0.3fc607bc09fdb443fe9f.hot-update.js": "/0.3fc607bc09fdb443fe9f.hot-update.js",
+    "/0.07a514262aa9bfc73bd4.hot-update.js": "/0.07a514262aa9bfc73bd4.hot-update.js",
+    "/0.9a45322427a0b546fe67.hot-update.js": "/0.9a45322427a0b546fe67.hot-update.js",
+    "/0.667f0dbc6be2640ce04f.hot-update.js": "/0.667f0dbc6be2640ce04f.hot-update.js",
+    "/0.22ad2a5d41c94630e431.hot-update.js": "/0.22ad2a5d41c94630e431.hot-update.js",
+    "/0.d2d66922183bd24723a2.hot-update.js": "/0.d2d66922183bd24723a2.hot-update.js",
+    "/0.14c64ce49632781ea8b9.hot-update.js": "/0.14c64ce49632781ea8b9.hot-update.js",
+    "/0.5148857a613451bdc551.hot-update.js": "/0.5148857a613451bdc551.hot-update.js",
+    "/0.c0d284539fb80ede4e78.hot-update.js": "/0.c0d284539fb80ede4e78.hot-update.js",
+    "/0.10eaa6c78de38c746faf.hot-update.js": "/0.10eaa6c78de38c746faf.hot-update.js",
+    "/0.eff5dab9f950aeccc79b.hot-update.js": "/0.eff5dab9f950aeccc79b.hot-update.js",
+    "/0.601326bcdb7c9be31948.hot-update.js": "/0.601326bcdb7c9be31948.hot-update.js",
+    "/0.021c9f5e6e65efc645ce.hot-update.js": "/0.021c9f5e6e65efc645ce.hot-update.js",
+    "/0.ebf9abfa02fbf3574347.hot-update.js": "/0.ebf9abfa02fbf3574347.hot-update.js",
+    "/0.1066aa0784544ec1b6ff.hot-update.js": "/0.1066aa0784544ec1b6ff.hot-update.js",
+    "/0.e146510c9da39ca4237f.hot-update.js": "/0.e146510c9da39ca4237f.hot-update.js",
+    "/0.623e3e579e047f91b341.hot-update.js": "/0.623e3e579e047f91b341.hot-update.js",
+    "/0.e00e2717900f9da88c71.hot-update.js": "/0.e00e2717900f9da88c71.hot-update.js",
+    "/0.ae6686a4ca4709cce1af.hot-update.js": "/0.ae6686a4ca4709cce1af.hot-update.js",
+    "/0.39725d9c108ac388a292.hot-update.js": "/0.39725d9c108ac388a292.hot-update.js",
+    "/0.ab76bc9d042685a245ac.hot-update.js": "/0.ab76bc9d042685a245ac.hot-update.js",
+    "/0.e4723bb9e1c6c4ff2fdc.hot-update.js": "/0.e4723bb9e1c6c4ff2fdc.hot-update.js",
+    "/0.612af90a564dbe1db21a.hot-update.js": "/0.612af90a564dbe1db21a.hot-update.js",
+    "/0.c39c5abd8d7a05aa089c.hot-update.js": "/0.c39c5abd8d7a05aa089c.hot-update.js",
+    "/0.273111ec738e6a688871.hot-update.js": "/0.273111ec738e6a688871.hot-update.js",
+    "/0.3098e11d334c75cdfa38.hot-update.js": "/0.3098e11d334c75cdfa38.hot-update.js",
+    "/0.f2c9a959f198bf0ee9f8.hot-update.js": "/0.f2c9a959f198bf0ee9f8.hot-update.js",
+    "/0.c627165b2ad97fef3ebd.hot-update.js": "/0.c627165b2ad97fef3ebd.hot-update.js",
+    "/0.cea78a4a125b15ccb6d3.hot-update.js": "/0.cea78a4a125b15ccb6d3.hot-update.js",
+    "/0.220f54d91d3ea5427ace.hot-update.js": "/0.220f54d91d3ea5427ace.hot-update.js",
+    "/0.1181f7af6ce21411f516.hot-update.js": "/0.1181f7af6ce21411f516.hot-update.js",
+    "/0.ef87b4b97c188dda7175.hot-update.js": "/0.ef87b4b97c188dda7175.hot-update.js",
+    "/0.54283ce5c8b45b0c8fe0.hot-update.js": "/0.54283ce5c8b45b0c8fe0.hot-update.js",
+    "/0.28ba04cf6820348ed062.hot-update.js": "/0.28ba04cf6820348ed062.hot-update.js",
+    "/0.6087ce33d47abe5847f0.hot-update.js": "/0.6087ce33d47abe5847f0.hot-update.js",
+    "/0.28734f8131fc31ea9389.hot-update.js": "/0.28734f8131fc31ea9389.hot-update.js",
+    "/0.19ebe008455b7b678806.hot-update.js": "/0.19ebe008455b7b678806.hot-update.js",
+    "/0.50ac3448ab4b037e77a2.hot-update.js": "/0.50ac3448ab4b037e77a2.hot-update.js",
+    "/0.36813bf5698a6ae5411f.hot-update.js": "/0.36813bf5698a6ae5411f.hot-update.js",
+    "/0.bcc23db36790ad68f4c3.hot-update.js": "/0.bcc23db36790ad68f4c3.hot-update.js",
+    "/0.1e2d01d613a12e12e4e2.hot-update.js": "/0.1e2d01d613a12e12e4e2.hot-update.js",
+    "/0.7fce5021f5afd873167b.hot-update.js": "/0.7fce5021f5afd873167b.hot-update.js",
+    "/0.edf47907105fec3535a3.hot-update.js": "/0.edf47907105fec3535a3.hot-update.js",
+    "/0.0709c40daea8ef33918d.hot-update.js": "/0.0709c40daea8ef33918d.hot-update.js",
+    "/0.75527b4aba85c6fc1d5b.hot-update.js": "/0.75527b4aba85c6fc1d5b.hot-update.js",
+    "/0.2915e4a235c44de2fe48.hot-update.js": "/0.2915e4a235c44de2fe48.hot-update.js",
+    "/0.a776a5451592954ebea5.hot-update.js": "/0.a776a5451592954ebea5.hot-update.js",
+    "/0.b14b8a0705ae8f4097d1.hot-update.js": "/0.b14b8a0705ae8f4097d1.hot-update.js",
+    "/0.404b820a1c31c2ffc955.hot-update.js": "/0.404b820a1c31c2ffc955.hot-update.js",
+    "/0.0918481f4859742474f5.hot-update.js": "/0.0918481f4859742474f5.hot-update.js",
+    "/0.ce817f0ff365ccfbe6d1.hot-update.js": "/0.ce817f0ff365ccfbe6d1.hot-update.js",
+    "/0.708de67c7130776fc256.hot-update.js": "/0.708de67c7130776fc256.hot-update.js",
+    "/0.0a039315a996f6df3c6e.hot-update.js": "/0.0a039315a996f6df3c6e.hot-update.js",
+    "/0.606569d2cfef032e3b28.hot-update.js": "/0.606569d2cfef032e3b28.hot-update.js",
+    "/0.61ecfe3c315b486a6f68.hot-update.js": "/0.61ecfe3c315b486a6f68.hot-update.js",
+    "/0.e2f01ff6091016570ada.hot-update.js": "/0.e2f01ff6091016570ada.hot-update.js",
+    "/0.164dd5727a791f52f63a.hot-update.js": "/0.164dd5727a791f52f63a.hot-update.js",
+    "/0.587ebd5c71f3b10dfb5a.hot-update.js": "/0.587ebd5c71f3b10dfb5a.hot-update.js",
+    "/0.4078385e1e6232d84285.hot-update.js": "/0.4078385e1e6232d84285.hot-update.js",
+    "/0.e3ae50f54fc4c98f2771.hot-update.js": "/0.e3ae50f54fc4c98f2771.hot-update.js",
+    "/0.205021b09489193a6952.hot-update.js": "/0.205021b09489193a6952.hot-update.js",
+    "/0.4eda6e49e7b605ac1e5d.hot-update.js": "/0.4eda6e49e7b605ac1e5d.hot-update.js",
+    "/0.f3de8363e3dec2d00572.hot-update.js": "/0.f3de8363e3dec2d00572.hot-update.js",
+    "/0.1998bae23f65fc0aab8b.hot-update.js": "/0.1998bae23f65fc0aab8b.hot-update.js",
+    "/0.d6785ea93bd712a8ee60.hot-update.js": "/0.d6785ea93bd712a8ee60.hot-update.js",
+    "/0.8a11f7363fa1e852a37d.hot-update.js": "/0.8a11f7363fa1e852a37d.hot-update.js",
+    "/0.329b713ed6b114d06e05.hot-update.js": "/0.329b713ed6b114d06e05.hot-update.js"
 }
