--- a/packages/zhiyicx-plus-group/composer.json
+++ b/packages/zhiyicx-plus-group/composer.json
@@ -5,11 +5,7 @@
     "license": "Apache-2.0",
     "require": {
         "php": ">=7.0",
-        "geohash/geohash": "^1.0",
-        "illuminate/console": "5.6.*",
-        "illuminate/contracts": "5.6.*",
-        "illuminate/database": "5.6.*",
-        "illuminate/support": "5.6.*"
+        "lvht/geohash": "^1.1"
     },
     "autoload": {
         "psr-4": {
