--- a/packages/zhiyicx-plus-question/package.json
+++ b/packages/zhiyicx-plus-question/package.json
@@ -19,13 +19,13 @@
         "axios": "^0.16.2",
         "chart.js": "^2.7.0",
         "lodash": "^4.17.4",
+        "cropperjs": "^1.3.2",
         "markdown-it": "^8.4.0",
         "markdown-it-plus-image": "^1.0.1",
         "numeral": "^2.0.6",
         "plus-message-bundle": "^0.0.5",
         "vue": "^2.5.2",
         "vue-chartjs": "^3.0.0",
-        "vue-core-image-upload": "^2.3.10",
         "vue-router": "^3.0.1",
         "vuex": "^3.0.0",
         "vuex-router-sync": "^5.0.0"
