feat: 增加新支付[alipay]的通知内容

--- a/composer.json
+++ b/composer.json
@@ -96,7 +96,10 @@
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "league/html-to-markdown": "^4.6",
+        "lokielse/omnipay-alipay": "~3",
+        "lokielse/omnipay-wechatpay": "~3",
         "medz/cors": "^1.1",
+        "omnipay/omnipay": "~3",
         "overtrue/easy-sms": "^1.0",
         "pingplusplus/pingpp-php": "^2.2",
         "predis/predis": "^1.1",
