chore: Changed project description

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "slimkit/plus",
-    "description": "A powerful, easy-to-develop social system built with Laravel.",
+    "description": "The Plus(ThinkSNS+) is a powerful, easy-to-develop social system built with Laravel.",
     "keywords": [
         "thinksns",
         "web",
