--- a/composer.json
+++ b/composer.json
@@ -97,8 +97,8 @@
         "laravel/tinker": "^1.0",
         "league/html-to-markdown": "^4.6",
         "league/omnipay": "^3.0",
-        "lokielse/omnipay-alipay": "~3",
-        "lokielse/omnipay-wechatpay": "~3",
+        "lokielse/omnipay-alipay": "^3.0",
+        "lokielse/omnipay-wechatpay": "^3.0",
         "medz/cors": "^1.3",
         "medz/gb-t-2260": "^1.0",
         "overtrue/easy-sms": "^1.0",
