--- a/packages/zhiyicx-plus-group/package.json
+++ b/packages/zhiyicx-plus-group/package.json
@@ -17,6 +17,7 @@
         "vue-template-compiler": "^2.5.9"
     },
     "dependencies": {
+        "@slimkit/plus-editor": "^0.0.3",
         "axios": "^0.16.2",
         "cropperjs": "^1.1.3",
         "less": "^2.7.3",
