fix(*): Fixed use `composer create-project slimkit/plus` hook

--- a/composer.json
+++ b/composer.json
@@ -151,7 +151,7 @@
     },
     "scripts": {
         "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+            "@php -r \"file_exists('storage/configure/.env') || copy('storage/configure/.env.example', 'storage/configure/.env');\""
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate",
