--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,8 @@ jobs:
   back_end:
     working_directory: ~/plus
     docker:
-      - image: circleci/php:7.1-cli-stretch-node-browsers
-      - image: circleci/circleci:5.7
+      - image: circleci/php:7.1-node-browsers
+      - image: circleci/mysql:5.7
     steps:
       - checkout
       - restore_cache:
