--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,9 @@ jobs:
           paths:
             - vendor
       - run:
+          name: "Create `.env`"
+          command: "cp ./storage/configure/.env.example storage/configure/.env"
+      - run:
           name: "Generate Keys"
           command: "php artisan app:key-generate"
       - run:
