--- a/Dockerfile-fpm
+++ b/Dockerfile-fpm
@@ -2,6 +2,7 @@ FROM php:7.2-fpm
 
 # install the PHP extensions we need
 RUN set -ex; \
+	pecl channel-update pecl.php.net; \
 	\
 	savedAptMark="$(apt-mark showmanual)"; \
 	\
@@ -65,7 +66,7 @@ RUN set -ex; \
 	rm -rf /var/www; \
 	mkdir /var/www; \
 	chown -R www-data:www-data /usr/src/plus; \
-	chown -R www-data:www-data /var/www;
+	chown -R www-data:www-data /var/www
 USER www-data
 RUN set -ex; \
 	composer install \
@@ -74,8 +75,10 @@ RUN set -ex; \
 		--classmap-authoritative \
 		--ignore-platform-reqs \
 		--working-dir=/usr/src/plus
-
+USER root
 COPY docker-entrypoint.sh /usr/local/bin/
+RUN set -ex; \
+	chmod -f +x /usr/local/bin/docker-entrypoint.sh
 ENTRYPOINT ["docker-entrypoint.sh"]
 
 WORKDIR /var/www
