--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,8 @@ jobs:
           APP_ENV: testing
           APP_DEBUG: true
           DB_CONNECTION: mysql
-          DB_HOST: mysql
+          DB_HOST: 127.0.0.1
+          DB_PORT: 3306
           DB_USERNAME: root
           DB_PASSWORD: null
           DB_DATABASE: "plus"
