--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,8 @@ jobs:
   back_end:
     working_directory: ~/plus
     docker:
-      - image: circleci/php:7.1-node-browsers
-      - image: circleci/mysql:5.7
+      - image: circleci/php:7.1-jessie-node-browsers
+      - image: circleci/mysql:5.7-ram
         environment:
           MYSQL_DATABASE: plus
     steps:
@@ -34,12 +34,6 @@ jobs:
           key: dependencies-{{ checksum "composer.json" }}
           paths:
             - vendor
-      - run:
-          name: "Create `.env`"
-          command: "cp ./storage/configure/.env.example storage/configure/.env"
-      - run:
-          name: "Setting Circle CI Database"
-          command: "php ./scripts/circle-ci-settings.php"
       - run:
           name: "Generate Keys"
           command: "php artisan app:key-generate"
