--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     },
     "collective": {
         "type": "opencollective",
-        "url": "https://opencollective.com/thinksns-plus",
-        "logo": "https://opencollective.com/thinksns-plus/logo.txt"
+        "url": "https://opencollective.com/plus",
+        "logo": "https://opencollective.com/plus/logo.txt"
     }
 }
