--- a/packages/slimkit-plus-feed/package.json
+++ b/packages/slimkit-plus-feed/package.json
@@ -1,25 +1,25 @@
 {
   "private": true,
   "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "cross-env": "^5.0.1",
-    "path": "^0.12.7",
-    "webpack": "^3.0.0",
+    "cross-env": "^5.2.0",
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "webpack": "^4.16.3",
+    "webpack-cli": "^3.1.0",
     "webpack-laravel-mix-manifest": "^1.0.3"
   },
   "dependencies": {
+    "@material-ui/core": "^1.4.2",
+    "@material-ui/icons": "^2.0.0",
     "axios": "^0.16.2",
     "lodash": "^4.17.4",
-    "material-ui": "^1.0.0-beta.25",
-    "material-ui-icons": "^1.0.0-beta.17",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-router-dom": "^4.1.1",
-    "react-tap-event-plugin": "^2.0.1"
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1"
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack --display-error-details --progress --colors --hide-modules",
