--- a/packages/slimkit-plus-feed/package.json
+++ b/packages/slimkit-plus-feed/package.json
@@ -22,7 +22,8 @@
     "lodash": "^4.17.4",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "react-select": "^2.0.0"
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack --display-error-details --progress --colors --hide-modules",
