--- a/packages/slimkit-plus-feed/package.json
+++ b/packages/slimkit-plus-feed/package.json
@@ -19,6 +19,7 @@
     "@material-ui/core": "^1.4.2",
     "@material-ui/icons": "^2.0.0",
     "axios": "^0.16.2",
+    "classnames": "^2.2.6",
     "lodash": "^4.17.4",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
