chore: 完成列表显示

--- a/packages/slimkit-plus-feed/.babelrc
+++ b/packages/slimkit-plus-feed/.babelrc
@@ -1,3 +1,6 @@
 {
-    "presets": ["env", "react", "stage-2"]
+    "presets": ["env", "react", "stage-2"],
+    "plugins": [
+        "transform-runtime"
+    ]
 }
