--- a/packages/slimkit-plus-feed/composer.json
+++ b/packages/slimkit-plus-feed/composer.json
@@ -18,7 +18,8 @@
             "database/seeds"
         ],
         "psr-4": {
-            "Zhiyi\\Component\\ZhiyiPlus\\PlusComponentFeed\\": "src/"
+            "Zhiyi\\Component\\ZhiyiPlus\\PlusComponentFeed\\": "src/",
+            "Zhiyi\\Plus\\Packages\\Feed\\": "src/"
         }
     },
     "autoload-dev": {
