--- a/packages/slimkit-plus-feed/package.json
+++ b/packages/slimkit-plus-feed/package.json
@@ -8,13 +8,15 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.2.0",
     "eslint": "^5.2.0",
     "eslint-plugin-react": "^7.10.0",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^4.16.3",
     "webpack-cli": "^3.1.0",
-    "webpack-laravel-mix-manifest": "^1.0.3"
+    "webpack-laravel-mix-manifest": "2.0.0"
   },
   "dependencies": {
     "@material-ui/core": "^1.4.2",
