--- a/composer.json
+++ b/composer.json
@@ -92,6 +92,14 @@
         },
         {
             "type": "path",
+            "url": "packages/zhiyicx-plus-pc",
+            "options": {
+                "symlink": true,
+                "plus-soft": true
+            }
+        },
+        {
+            "type": "path",
             "url": "packages/zhiyicx-plus-question",
             "options": {
                 "symlink": true,
@@ -133,6 +141,7 @@
         "symfony/yaml": "^4.0",
         "tymon/jwt-auth": "1.0.0-rc.2",
         "zhiyicx/plus-group": "1.9.0",
+        "zhiyicx/plus-pc": "^2.0",
         "zhiyicx/plus-question": "1.9.0"
     },
     "require-dev": {
