chore: 增加文件系统默认设置

--- a/storage/configure/plus.yml.example
+++ b/storage/configure/plus.yml.example
@@ -170,6 +170,16 @@ database:
 
 #
 #########################################################################
+# /config/filesystems.php
+#########################################################################
+#
+filesystems:
+  default: public
+  disks:
+    public:
+      url: http://localhost/storage
+#
+#########################################################################
 # /config/image.php
 #########################################################################
 #
