--- a/composer.json
+++ b/composer.json
@@ -85,6 +85,7 @@
     ],
     "require": {
         "php": "^7.1.3",
+        "aliyuncs/oss-sdk-php": "^2.3",
         "doctrine/dbal": "^2.5",
         "erusev/parsedown": "^1.7",
         "ezyang/htmlpurifier": "^4.10",
