chore(*): 修复错误的 composer.json

--- a/composer.json
+++ b/composer.json
@@ -81,6 +81,30 @@
                 "symlink": true,
                 "plus-soft": true
             }
+        },
+        {
+            "type": "path",
+            "url": "packages/zhiyicx-plus-group",
+            "options": {
+                "symlink": true,
+                "plus-soft": true
+            }
+        },
+        {
+            "type": "path",
+            "url": "packages/zhiyicx-plus-pc",
+            "options": {
+                "symlink": true,
+                "plus-soft": true
+            }
+        },
+        {
+            "type": "path",
+            "url": "packages/zhiyicx-plus-question",
+            "options": {
+                "symlink": true,
+                "plus-soft": true
+            }
         }
     ],
     "require": {
@@ -116,7 +140,10 @@
         "slimkit/plus-socialite": "2.0.0",
         "symfony/finder": "^4.0",
         "symfony/yaml": "^4.0",
-        "tymon/jwt-auth": "1.0.0-rc.2"
+        "tymon/jwt-auth": "1.0.0-rc.2",
+        "zhiyicx/plus-group": "1.9.0",
+        "zhiyicx/plus-pc": "^2.0",
+        "zhiyicx/plus-question": "1.9.0"
     },
     "require-dev": {
         "codacy/coverage": "^1.4",
