--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,9 @@
 version: 2
 jobs:
   front_end:
+    branches:
+        ignore:
+            - gh-pages
     working_directory: ~/plus
     docker:
       - image: circleci/node:10
@@ -16,6 +19,9 @@ jobs:
           name: "Run Production"
           command: "npm run production"
   back_end:
+    branches:
+        ignore:
+            - gh-pages
     working_directory: ~/plus
     docker:
       - image: circleci/php:7.1-jessie-node-browsers
