--- a/.travis.yml
+++ b/.travis.yml
@@ -30,13 +30,15 @@ cache:
 before_install:
   # Install NODE.js 8.12 version
   - nvm install 8
+  # Install Yarn
+  - npm install --global yarn
   # Check and create database.
   - sh -c "if [ '$DB' = 'postgres' ]; then psql -c 'create database plus;' -U postgres; echo $DB; fi"
   - sh -c "if [ '$DB' = 'mysql' ]; then mysql -e 'CREATE DATABASE IF NOT EXISTS plus;'; echo $DB; fi"
   - php ./scripts/travis-ci-settings.php $DB
 
 install:
-  - npm install
+  - yarn install
   - composer install
   - php artisan key:generate
   - php artisan jwt:secret --force
@@ -46,7 +48,7 @@ install:
 
 script:
   - php vendor/bin/phpunit --coverage-clover=coverage.xml
-  - npm run development
+  - yarn development
   - bash ./scripts/publish-docs-gh-pages.sh bot
 
 after_script:
