--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
         "cross-env": "^5.1.5",
         "laravel-mix": "^2.1",
         "opencollective": "^1.0.3",
-        "vue-template-compiler": "^2.5.16",
-        "vuepress": "^0.14.2"
+        "vue-template-compiler": "^2.5.16"
     },
     "dependencies": {
         "@slimkit/plus-editor": "^0.0.3",
