chore: 测试 travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ install:
 script:
   # - php vendor/bin/phpunit --coverage-clover=coverage.xml
   # - yarn development
-  - yarn add vuepress -D && bash ./scripts/publish-docs-gh-pages.sh bot
+  - yarn add vuepress -D && yarn docs:build
 
 # after_script:
   # - php vendor/bin/codacycoverage clover coverage.xml
@@ -60,7 +60,7 @@ deploy:
   skip-cleanup: true
   github-token: $GITHUB_PUBLISH_TOKEN
   keep-history: true
-  local-dir: storage/app/plus-publish-gh-pages/
+  local-dir: docs/.vuepress/dist
   target-branch: gh-pages
   name: SlimKit Bot
   verbose: true
