--- a/.travis.yml
+++ b/.travis.yml
@@ -12,20 +12,20 @@ matrix:
     - php: 7.1
       env: DB=mysql
       services: mysql
-    # - php: 7.1
-    #   env: DB=postgres
-    #   services: postgresql
-    # - php: 7.2
-    #   env: DB=mysql
-    #   services: mysql
-    # - php: 7.2
-    #   env: DB=postgres
-    #   services: postgresql
+    - php: 7.1
+      env: DB=postgres
+      services: postgresql
+    - php: 7.2
+      env: DB=mysql
+      services: mysql
+    - php: 7.2
+      env: DB=postgres
+      services: postgresql
 
-# cache:
-  # directories:
-    # - $HOME/.composer/cache
-    # - node_modules
+cache:
+  directories:
+    - $HOME/.composer/cache
+    - node_modules
 
 before_install:
   # Install NODE.js 8.12 version
@@ -33,27 +33,27 @@ before_install:
   # Install Yarn
   - npm install --global yarn
   # Check and create database.
-  # - sh -c "if [ '$DB' = 'postgres' ]; then psql -c 'create database plus;' -U postgres; echo $DB; fi"
-  # - sh -c "if [ '$DB' = 'mysql' ]; then mysql -e 'CREATE DATABASE IF NOT EXISTS plus;'; echo $DB; fi"
-  # - php ./scripts/travis-ci-settings.php $DB
+  - sh -c "if [ '$DB' = 'postgres' ]; then psql -c 'create database plus;' -U postgres; echo $DB; fi"
+  - sh -c "if [ '$DB' = 'mysql' ]; then mysql -e 'CREATE DATABASE IF NOT EXISTS plus;'; echo $DB; fi"
+  - php ./scripts/travis-ci-settings.php $DB
 
 install:
   - yarn install
   - composer install
-  # - php artisan key:generate
-  # - php artisan jwt:secret --force
-  # - php artisan migrate -vvv
-  # - php artisan db:seed -vvv
-  # - php artisan vendor:publish --all -vvv
+  - php artisan key:generate
+  - php artisan jwt:secret --force
+  - php artisan migrate -vvv
+  - php artisan db:seed -vvv
+  - php artisan vendor:publish --all -vvv
 
 script:
-  # - php vendor/bin/phpunit --coverage-clover=coverage.xml
-  # - yarn development
+  - php vendor/bin/phpunit --coverage-clover=coverage.xml
+  - yarn development
   - yarn add vuepress -D && yarn docs:build
 
-# after_script:
-  # - php vendor/bin/codacycoverage clover coverage.xml
-  # - bash <(curl -s https://codecov.io/bash)
+after_script:
+  - php vendor/bin/codacycoverage clover coverage.xml
+  - bash <(curl -s https://codecov.io/bash)
 
 deploy:
   provider: pages
